--- a/ui/user/login.ui
+++ b/ui/user/login.ui
@@ -41,7 +41,7 @@
       </size>
      </property>
      <property name="text">
-      <string>&amp;user</string>
+      <string>用户名</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignCenter</set>
@@ -69,18 +69,18 @@
       </size>
      </property>
      <property name="text">
-      <string>&amp;passsword</string>
+      <string>密码</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignCenter</set>
      </property>
      <property name="buddy">
-      <cstring>lineEdit</cstring>
+      <cstring>password_lineEdit</cstring>
      </property>
     </widget>
    </item>
    <item row="1" column="1" colspan="2">
-    <widget class="QLineEdit" name="lineEdit"/>
+    <widget class="QLineEdit" name="password_lineEdit"/>
    </item>
    <item row="2" column="0">
     <widget class="QPushButton" name="login_pushButton">
@@ -97,7 +97,7 @@
       </size>
      </property>
      <property name="text">
-      <string>Login now</string>
+      <string>现在登录</string>
      </property>
     </widget>
    </item>
@@ -116,7 +116,7 @@
       </size>
      </property>
      <property name="text">
-      <string>PushButton</string>
+      <string>注册</string>
      </property>
     </widget>
    </item>
@@ -135,7 +135,7 @@
       </size>
      </property>
      <property name="text">
-      <string>Login in later</string>
+      <string>稍后登录</string>
      </property>
     </widget>
    </item>
