--- a/ui/user/login.ui
+++ b/ui/user/login.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>398</width>
-    <height>217</height>
+    <height>146</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -20,8 +20,103 @@
    <string>Form</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
+   <item row="2" column="1" colspan="2">
+    <widget class="QLabel" name="pixverify_label">
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="1" colspan="2">
+    <widget class="QLineEdit" name="password_lineEdit"/>
+   </item>
+   <item row="4" column="0">
+    <widget class="QPushButton" name="login_pushButton">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="minimumSize">
+      <size>
+       <width>85</width>
+       <height>25</height>
+      </size>
+     </property>
+     <property name="text">
+      <string>现在登录</string>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="2">
+    <widget class="QPushButton" name="login_in_later_pushButton">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="minimumSize">
+      <size>
+       <width>85</width>
+       <height>25</height>
+      </size>
+     </property>
+     <property name="text">
+      <string>稍后登录</string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="0">
+    <widget class="QLabel" name="text_password_label">
+     <property name="minimumSize">
+      <size>
+       <width>65</width>
+       <height>20</height>
+      </size>
+     </property>
+     <property name="maximumSize">
+      <size>
+       <width>100</width>
+       <height>20</height>
+      </size>
+     </property>
+     <property name="text">
+      <string>密码</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+     <property name="buddy">
+      <cstring>password_lineEdit</cstring>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="1">
+    <widget class="QPushButton" name="reg_pushButton">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="minimumSize">
+      <size>
+       <width>85</width>
+       <height>25</height>
+      </size>
+     </property>
+     <property name="text">
+      <string>注册</string>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="1" colspan="2">
+    <widget class="QLineEdit" name="login_lineEdit"/>
+   </item>
    <item row="0" column="0">
-    <widget class="QLabel" name="user_label">
+    <widget class="QLabel" name="text_user_label">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
        <horstretch>0</horstretch>
@@ -51,11 +146,8 @@
      </property>
     </widget>
    </item>
-   <item row="0" column="1" colspan="2">
-    <widget class="QLineEdit" name="login_lineEdit"/>
-   </item>
-   <item row="1" column="0">
-    <widget class="QLabel" name="password_label">
+   <item row="2" column="0" rowspan="2">
+    <widget class="QLabel" name="text_pixverify_label">
      <property name="minimumSize">
       <size>
        <width>65</width>
@@ -65,79 +157,16 @@
      <property name="maximumSize">
       <size>
        <width>100</width>
-       <height>20</height>
+       <height>16777215</height>
       </size>
      </property>
      <property name="text">
-      <string>密码</string>
-     </property>
-     <property name="alignment">
-      <set>Qt::AlignCenter</set>
-     </property>
-     <property name="buddy">
-      <cstring>password_lineEdit</cstring>
+      <string>图片验证码</string>
      </property>
     </widget>
    </item>
-   <item row="1" column="1" colspan="2">
-    <widget class="QLineEdit" name="password_lineEdit"/>
-   </item>
-   <item row="2" column="0">
-    <widget class="QPushButton" name="login_pushButton">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
-     </property>
-     <property name="minimumSize">
-      <size>
-       <width>85</width>
-       <height>25</height>
-      </size>
-     </property>
-     <property name="text">
-      <string>现在登录</string>
-     </property>
-    </widget>
-   </item>
-   <item row="2" column="1">
-    <widget class="QPushButton" name="reg_pushButton">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
-     </property>
-     <property name="minimumSize">
-      <size>
-       <width>85</width>
-       <height>25</height>
-      </size>
-     </property>
-     <property name="text">
-      <string>注册</string>
-     </property>
-    </widget>
-   </item>
-   <item row="2" column="2">
-    <widget class="QPushButton" name="login_in_later_pushButton">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
-     </property>
-     <property name="minimumSize">
-      <size>
-       <width>85</width>
-       <height>25</height>
-      </size>
-     </property>
-     <property name="text">
-      <string>稍后登录</string>
-     </property>
-    </widget>
+   <item row="3" column="1" colspan="2">
+    <widget class="QLineEdit" name="pixverify_lineEdit"/>
    </item>
   </layout>
  </widget>
