--- a/uis/resource/user/ui.qrc
+++ b/uis/resource/user/ui.qrc
@@ -1,5 +1,6 @@
 <RCC>
   <qresource prefix="test">
+    <file>favicon.ico</file>
     <file>test.ico</file>
     <file>logo.svg</file>
     <file>test.png</file>
