--- a/uis/user/main_login_page.ui
+++ b/uis/user/main_login_page.ui
@@ -37,6 +37,9 @@
         <property name="text">
          <string/>
         </property>
+        <property name="scaledContents">
+         <bool>true</bool>
+        </property>
        </widget>
       </item>
       <item>
@@ -70,6 +73,9 @@
          <widget class="QLabel" name="showlabel_2">
           <property name="text">
            <string/>
+          </property>
+          <property name="scaledContents">
+           <bool>true</bool>
           </property>
          </widget>
         </item>
