--- a/uis/userlogin/login_and_reg_ui/login_and_reg.ui
+++ b/uis/userlogin/login_and_reg_ui/login_and_reg.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>398</width>
-    <height>247</height>
+    <height>172</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -208,7 +208,7 @@
     </widget>
    </item>
    <item row="5" column="1" colspan="2">
-    <widget class="QLabel" name="pixverify_label">
+    <widget class="QLabel" name="text_pixverify_label_2">
      <property name="text">
       <string/>
      </property>
